// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MoneyPage Snapshot Tests matches snapshot for desktop light theme 1`] = `
<div
  class="flex flex-col min-h-screen bg-background"
>
  <div
    class="sticky top-0 z-10 bg-background border-b border-border"
  >
    <div
      class="flex items-center justify-between p-4"
    >
      <div
        class="flex items-center space-x-3"
      >
        <button
          class="p-2 rounded-lg hover:bg-muted transition-colors"
        >
          <i
            class="fas fa-arrow-left text-foreground"
          />
        </button>
        <div>
          <h1
            class="font-bold text-foreground text-2xl"
          >
            Money
          </h1>
          <p
            class="text-sm text-muted-foreground"
          >
            Manage your accounts and cards
          </p>
        </div>
      </div>
    </div>
    <div
      class="px-4 pb-4"
    >
      <div
        class="w-full"
        data-orientation="horizontal"
        dir="ltr"
      >
        <div
          aria-orientation="horizontal"
          class="items-center justify-center rounded-md text-muted-foreground grid w-full grid-cols-3 h-12 bg-muted/50 p-1"
          data-orientation="horizontal"
          role="tablist"
          style="outline: none;"
          tabindex="0"
        >
          <button
            aria-controls="radix-:r3e:-content-accounts"
            aria-selected="false"
            class="inline-flex items-center justify-center whitespace-nowrap px-3 py-1.5 ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 text-sm font-medium rounded-lg data-[state=active]:bg-background data-[state=active]:text-primary data-[state=active]:shadow-sm"
            data-orientation="horizontal"
            data-radix-collection-item=""
            data-state="inactive"
            id="radix-:r3e:-trigger-accounts"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <i
              class="fas fa-university mr-2"
            />
            Accounts
          </button>
          <button
            aria-controls="radix-:r3e:-content-credit-cards"
            aria-selected="true"
            class="inline-flex items-center justify-center whitespace-nowrap px-3 py-1.5 ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 text-sm font-medium rounded-lg data-[state=active]:bg-background data-[state=active]:text-primary data-[state=active]:shadow-sm"
            data-orientation="horizontal"
            data-radix-collection-item=""
            data-state="active"
            id="radix-:r3e:-trigger-credit-cards"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <i
              class="fas fa-credit-card mr-2"
            />
            Credit Cards
          </button>
          <button
            aria-controls="radix-:r3e:-content-net-worth"
            aria-selected="false"
            class="inline-flex items-center justify-center whitespace-nowrap px-3 py-1.5 ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 text-sm font-medium rounded-lg data-[state=active]:bg-background data-[state=active]:text-primary data-[state=active]:shadow-sm"
            data-orientation="horizontal"
            data-radix-collection-item=""
            data-state="inactive"
            id="radix-:r3e:-trigger-net-worth"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <i
              class="fas fa-chart-line mr-2"
            />
            Net Worth
          </button>
        </div>
      </div>
    </div>
    <div
      class="px-4 pb-4"
    >
      <div
        class="flex items-center space-x-2 overflow-x-auto pb-2"
      >
        <span
          class="text-muted-foreground text-sm whitespace-nowrap"
        >
          Filter by:
        </span>
        <button
          class="px-3 py-1.5 rounded-full whitespace-nowrap transition-colors text-sm bg-primary text-primary-foreground"
        >
          <i
            class="fas fa-list mr-1"
          />
          All
        </button>
        <button
          class="px-3 py-1.5 rounded-full whitespace-nowrap transition-colors text-sm bg-muted text-muted-foreground hover:bg-muted/80"
        >
          HDFC Bank
        </button>
        <button
          class="px-3 py-1.5 rounded-full whitespace-nowrap transition-colors text-sm bg-muted text-muted-foreground hover:bg-muted/80"
        >
          ICICI Bank
        </button>
        <button
          class="px-3 py-1.5 rounded-full whitespace-nowrap transition-colors text-sm bg-muted text-muted-foreground hover:bg-muted/80"
        >
          State Bank of India
        </button>
        <button
          class="px-3 py-1.5 rounded-full whitespace-nowrap transition-colors bg-green-100 text-green-700 hover:bg-green-200 dark:bg-green-900/30 dark:text-green-400 dark:hover:bg-green-900/50 text-sm"
        >
          <svg
            class="lucide lucide-plus w-3 h-3 mr-1 inline"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
          Add Credit Card
        </button>
      </div>
    </div>
  </div>
  <main
    class="flex-1 p-4"
  >
    <div
      class="w-full"
      data-orientation="horizontal"
      dir="ltr"
    >
      <div
        aria-labelledby="radix-:r3i:-trigger-accounts"
        class="ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 mt-0"
        data-orientation="horizontal"
        data-state="inactive"
        hidden=""
        id="radix-:r3i:-content-accounts"
        role="tabpanel"
        tabindex="0"
      />
      <div
        aria-labelledby="radix-:r3i:-trigger-credit-cards"
        class="ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 mt-0"
        data-orientation="horizontal"
        data-state="active"
        id="radix-:r3i:-content-credit-cards"
        role="tabpanel"
        style="animation-duration: 0s;"
        tabindex="0"
      >
        <div
          class="space-y-4"
        >
          <div
            class="flex items-center justify-between"
          >
            <div>
              <h2
                class="text-lg font-semibold text-foreground"
              >
                All cards
              </h2>
              <p
                class="text-sm text-muted-foreground"
              >
                As of last available statement
              </p>
            </div>
            <span
              class="text-sm text-muted-foreground"
            >
              3
               card
              s
            </span>
          </div>
          <div
            class="grid gap-4"
          >
            <div
              data-testid="credit-card-card-1"
            >
              <span
                data-testid="card-name"
              >
                HDFC Swiggy
              </span>
              <span
                data-testid="card-institution"
              >
                HDFC Bank
              </span>
              <button
                data-testid="manage-card-btn"
              >
                Manage card
              </button>
              <button
                data-testid="view-breakdown-btn"
              >
                View breakdown
              </button>
            </div>
            <div
              data-testid="credit-card-card-2"
            >
              <span
                data-testid="card-name"
              >
                ICICI Amazon Pay
              </span>
              <span
                data-testid="card-institution"
              >
                ICICI Bank
              </span>
              <button
                data-testid="manage-card-btn"
              >
                Manage card
              </button>
              <button
                data-testid="view-breakdown-btn"
              >
                View breakdown
              </button>
            </div>
            <div
              data-testid="credit-card-card-3"
            >
              <span
                data-testid="card-name"
              >
                SBI SimplyCLICK
              </span>
              <span
                data-testid="card-institution"
              >
                State Bank of India
              </span>
              <button
                data-testid="manage-card-btn"
              >
                Manage card
              </button>
              <button
                data-testid="view-breakdown-btn"
              >
                View breakdown
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-labelledby="radix-:r3i:-trigger-net-worth"
        class="ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 mt-0"
        data-orientation="horizontal"
        data-state="inactive"
        hidden=""
        id="radix-:r3i:-content-net-worth"
        role="tabpanel"
        tabindex="0"
      />
    </div>
  </main>
</div>
`;

exports[`MoneyPage Snapshot Tests matches snapshot for mobile dark theme 1`] = `
<div
  class="flex flex-col min-h-screen bg-background"
>
  <div
    class="sticky top-0 z-10 bg-background border-b border-border"
  >
    <div
      class="flex items-center justify-between p-4"
    >
      <div
        class="flex items-center space-x-3"
      >
        <button
          class="p-2 rounded-lg hover:bg-muted transition-colors"
        >
          <i
            class="fas fa-arrow-left text-foreground"
          />
        </button>
        <div>
          <h1
            class="font-bold text-foreground text-xl"
          >
            Money
          </h1>
          <p
            class="text-sm text-muted-foreground"
          >
            Manage your accounts and cards
          </p>
        </div>
      </div>
    </div>
    <div
      class="px-4 pb-4"
    >
      <div
        class="w-full"
        data-orientation="horizontal"
        dir="ltr"
      >
        <div
          aria-orientation="horizontal"
          class="items-center justify-center rounded-md text-muted-foreground grid w-full grid-cols-3 h-12 bg-muted/50 p-1"
          data-orientation="horizontal"
          role="tablist"
          style="outline: none;"
          tabindex="0"
        >
          <button
            aria-controls="radix-:r3j:-content-accounts"
            aria-selected="false"
            class="inline-flex items-center justify-center whitespace-nowrap px-3 py-1.5 ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 text-xs font-medium rounded-lg data-[state=active]:bg-background data-[state=active]:text-primary data-[state=active]:shadow-sm"
            data-orientation="horizontal"
            data-radix-collection-item=""
            data-state="inactive"
            id="radix-:r3j:-trigger-accounts"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <i
              class="fas fa-university mr-2"
            />
            Accounts
          </button>
          <button
            aria-controls="radix-:r3j:-content-credit-cards"
            aria-selected="true"
            class="inline-flex items-center justify-center whitespace-nowrap px-3 py-1.5 ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 text-xs font-medium rounded-lg data-[state=active]:bg-background data-[state=active]:text-primary data-[state=active]:shadow-sm"
            data-orientation="horizontal"
            data-radix-collection-item=""
            data-state="active"
            id="radix-:r3j:-trigger-credit-cards"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <i
              class="fas fa-credit-card mr-2"
            />
            Credit Cards
          </button>
          <button
            aria-controls="radix-:r3j:-content-net-worth"
            aria-selected="false"
            class="inline-flex items-center justify-center whitespace-nowrap px-3 py-1.5 ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 text-xs font-medium rounded-lg data-[state=active]:bg-background data-[state=active]:text-primary data-[state=active]:shadow-sm"
            data-orientation="horizontal"
            data-radix-collection-item=""
            data-state="inactive"
            id="radix-:r3j:-trigger-net-worth"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <i
              class="fas fa-chart-line mr-2"
            />
            Net Worth
          </button>
        </div>
      </div>
    </div>
    <div
      class="px-4 pb-4"
    >
      <div
        class="flex items-center space-x-2 overflow-x-auto pb-2"
      >
        <span
          class="text-muted-foreground text-xs whitespace-nowrap"
        >
          Filter by:
        </span>
        <button
          class="px-3 py-1.5 rounded-full whitespace-nowrap transition-colors text-xs bg-primary text-primary-foreground"
        >
          <i
            class="fas fa-list mr-1"
          />
          All
        </button>
        <button
          class="px-3 py-1.5 rounded-full whitespace-nowrap transition-colors text-xs bg-muted text-muted-foreground hover:bg-muted/80"
        >
          HDFC Bank
        </button>
        <button
          class="px-3 py-1.5 rounded-full whitespace-nowrap transition-colors text-xs bg-muted text-muted-foreground hover:bg-muted/80"
        >
          ICICI Bank
        </button>
        <button
          class="px-3 py-1.5 rounded-full whitespace-nowrap transition-colors text-xs bg-muted text-muted-foreground hover:bg-muted/80"
        >
          State Bank of India
        </button>
        <button
          class="px-3 py-1.5 rounded-full whitespace-nowrap transition-colors bg-green-100 text-green-700 hover:bg-green-200 dark:bg-green-900/30 dark:text-green-400 dark:hover:bg-green-900/50 text-xs"
        >
          <svg
            class="lucide lucide-plus w-3 h-3 mr-1 inline"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
          Add Credit Card
        </button>
      </div>
    </div>
  </div>
  <main
    class="flex-1 p-4"
  >
    <div
      class="w-full"
      data-orientation="horizontal"
      dir="ltr"
    >
      <div
        aria-labelledby="radix-:r3n:-trigger-accounts"
        class="ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 mt-0"
        data-orientation="horizontal"
        data-state="inactive"
        hidden=""
        id="radix-:r3n:-content-accounts"
        role="tabpanel"
        tabindex="0"
      />
      <div
        aria-labelledby="radix-:r3n:-trigger-credit-cards"
        class="ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 mt-0"
        data-orientation="horizontal"
        data-state="active"
        id="radix-:r3n:-content-credit-cards"
        role="tabpanel"
        style="animation-duration: 0s;"
        tabindex="0"
      >
        <div
          class="space-y-4"
        >
          <div
            class="flex items-center justify-between"
          >
            <div>
              <h2
                class="text-lg font-semibold text-foreground"
              >
                All cards
              </h2>
              <p
                class="text-sm text-muted-foreground"
              >
                As of last available statement
              </p>
            </div>
            <span
              class="text-sm text-muted-foreground"
            >
              3
               card
              s
            </span>
          </div>
          <div
            class="grid gap-4"
          >
            <div
              data-testid="credit-card-card-1"
            >
              <span
                data-testid="card-name"
              >
                HDFC Swiggy
              </span>
              <span
                data-testid="card-institution"
              >
                HDFC Bank
              </span>
              <button
                data-testid="manage-card-btn"
              >
                Manage card
              </button>
              <button
                data-testid="view-breakdown-btn"
              >
                View breakdown
              </button>
            </div>
            <div
              data-testid="credit-card-card-2"
            >
              <span
                data-testid="card-name"
              >
                ICICI Amazon Pay
              </span>
              <span
                data-testid="card-institution"
              >
                ICICI Bank
              </span>
              <button
                data-testid="manage-card-btn"
              >
                Manage card
              </button>
              <button
                data-testid="view-breakdown-btn"
              >
                View breakdown
              </button>
            </div>
            <div
              data-testid="credit-card-card-3"
            >
              <span
                data-testid="card-name"
              >
                SBI SimplyCLICK
              </span>
              <span
                data-testid="card-institution"
              >
                State Bank of India
              </span>
              <button
                data-testid="manage-card-btn"
              >
                Manage card
              </button>
              <button
                data-testid="view-breakdown-btn"
              >
                View breakdown
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-labelledby="radix-:r3n:-trigger-net-worth"
        class="ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 mt-0"
        data-orientation="horizontal"
        data-state="inactive"
        hidden=""
        id="radix-:r3n:-content-net-worth"
        role="tabpanel"
        tabindex="0"
      />
    </div>
  </main>
</div>
`;
